--- a/everytime/requirements.txt
+++ b/everytime/requirements.txt
@@ -7,3 +7,4 @@ django-debug-toolbar==2.2
 djangorestframework==3.11.1
 djangorestframework-jwt
 django-rest-authtoken
+Pillow  # profile picture 관련, 이미지처리
