--- a/.github/workflows/back_CI.yml
+++ b/.github/workflows/back_CI.yml
@@ -25,6 +25,7 @@ jobs:
         
     - name: Install Dependencies
       run: |
+        cd everytime
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         
