--- a/.github/workflows/back_CI.yml
+++ b/.github/workflows/back_CI.yml
@@ -28,8 +28,12 @@ jobs:
         cd everytime
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        
+
     - name: Run Tests
       run: |
         cd everytime
         python manage.py test
+      env: |       
+        SECRET_KEY = ${{ secrets.SECRET_KEY }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
