`./manage.py test` 를 실행할 때 모든 input을 기본값으로 자동 입력

--- a/.github/workflows/back_CI.yml
+++ b/.github/workflows/back_CI.yml
@@ -32,7 +32,7 @@ jobs:
     - name: Run Tests
       run: |
         cd everytime
-        python manage.py test
+        python manage.py test --no-input
       env:
         SECRET_KEY: ${{ secrets.SECRET_KEY }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
