학교인증 메시지 수정, workflow 수정

--- a/.github/workflows/back_CI.yml
+++ b/.github/workflows/back_CI.yml
@@ -51,3 +51,4 @@ jobs:
         EMAIL_HOST_PASSWORD: ${{ secrets.EMAIL_HOST_PASSWORD }}
         SERVER_EMAIL: ${{ secrets.SERVER_EMAIL }}
         REDIRECT_PAGE: ${{ secrets.REDIRECT_PAGE }}
+        BASE_URL: ${{ secrets.BASE_URL }}
