--- a/everytime/requirements.txt
+++ b/everytime/requirements.txt
@@ -13,3 +13,8 @@ django-storages # 다양한 storage 활용을 위한
 boto3 # aws s3 접근을 위
 faker
 django-cors-headers
+django-extensions
+"ipython[notebook]"
+numpy==1.22.0
+pandas==1.3.5
+xlrd==2.0.1
