--- a/everytime/requirements.txt
+++ b/everytime/requirements.txt
@@ -3,6 +3,7 @@ Django==3.2.6
 mysqlclient==2.0.1
 pytz==2021.1
 sqlparse==0.4.1
+django-filter==21.1
 django-debug-toolbar==2.2
 djangorestframework==3.11.1
 djangorestframework-simplejwt==5.0.0
